k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-service
  template:
    metadata:
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/scrape: "true"
        prometheus.io/port: "9000"
    spec:
      containers:
        - name: edge-service
          image: company/edge-service:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 15
          volumeMounts:
            - name: edge-service-volume
              mountPath: /workspace/config
            - name: edge-service-volume-secret
              mountPath: /workspace/secrets/edge-service-secret
      volumes:
        - name: edge-service-volume
          configMap:
            name: edge-service
        - name: edge-service-volume-secret
          secret:
            secretName: edge-service
